# sapience

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  DOCKER.md  DOCKER_SETUP_COMPLETE.md  Jenkinsfile  Makefile  README.md  composer.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pint.json
.cursor/: mcp.json
.cursor/rules/: laravel-boost.mdc  project-rule.mdc
.junie/mcp/: mcp.json
app/Actions/: CompleteFileUploadAction.php  CreateConversationAction.php  CreateDatasetAction.php  CreateResearchAction.php  DeleteConversationAction.php  DeleteDatasetAction.php  DeleteFileAction.php  DeleteResearchAction.php  RequestFileUploadAction.php  UpdateDatasetAction.php  UpdateResearchAction.php
app/Data/: CrawlerResultData.php
app/Enums/: AuditStatus.php  FileStatus.php
app/Jobs/: CreateConversationTitle.php  ProcessFileForVectorStore.php  ResearchProcessJob.php  UrlSeoAudit.php
app/Models/: Audit.php  AuditLink.php  Conversation.php  Dataset.php  File.php  Message.php  Organisation.php  Research.php  ResearchLink.php  User.php  WorkflowInterrupt.php
app/Neuron/: ConversationTitleAgent.php  ResearchWorkflow.php  SapienceBot.php  SeoAuditWorkflow.php
app/Providers/: FortifyServiceProvider.php  OpenTelemetryServiceProvider.php
app/Queries/: GetOrganisationDatasetsQuery.php
app/Services/: CrawlerService.php  SearchService.php  SignedUrlService.php  TypesenseService.php  UtilService.php
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  Dockerfile.simple  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py  users.py
backend/app/http/responses/: responses.py
backend/app/models/: __init__.py  user.py
backend/app/services/: file_validator.py  minio_client.py  user_service.py
backend/config/: __init__.py  database.py  session.py
backend/tests/: conftest.py  test_file_validator.py  test_main.py  test_minio_client.py
bootstrap/: app.php  providers.php
config/: filesystems.php  sapience.php  services.php
docs/: human-in-the-loop-implementation.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
routes/: web.php
scripts/: setup-minio.sh
tests/: Pest.php
(+169 files in other folders)
