[project]
name = "sapience-backend"
version = "0.1.0"
description = "FastAPI backend for Sapience application"
authors = [
    {name = "Amitav Roy", email = "amitav@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
